<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/taskList"
        android:title="@string/menu_task_list"
        android:icon="@drawable/ic_baseline_assignment"/>

    <item
        android:id="@+id/taskTracking"
        android:title="@string/menu_task_tracking"
        android:icon="@drawable/ic_baseline_tracking"/>

    <item
        android:id="@+id/notifications"
        android:title="@string/menu_notifications"
        android:icon="@drawable/ic_baseline_notifications"/>

    <item
        android:id="@+id/users"
        android:title="@string/menu_users"
        android:icon="@drawable/ic_baseline_assignment_ind"/>

    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_baseline_settings"/>

</menu>