<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationFragment">

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_action_item"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_secondary_action_item"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

    <EditText
        style="@style/EditTextHint"
        android:id="@+id/editLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_item"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/EditTextHint"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_item"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>