<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutEvents"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/event_card_first"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/textEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/textEventName"
            android:layout_marginTop="15dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEventWorkers"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textEventDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textEventWorkers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_item"
                android:drawableStart="@drawable/ic_outline_account_circle"
                android:drawablePadding="5dp"
                android:paddingVertical="5dp"
                android:drawableTint="@color/black"
                android:text="@string/event_worker"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textEventDateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_date"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="16sp"
            android:background="@drawable/rounded_item"
            android:paddingTop="3dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/clEventWorkers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_outline_watch"
            android:drawablePadding="5dp"
            android:paddingVertical="5dp"
            android:drawableTint="@color/black"
            android:layout_marginBottom="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>