<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventFragment">

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="320dp"
        android:layout_height="55dp"
        style="@style/EditTextHint"
        android:hint="@string/event_name"
        android:background="@drawable/rounded_item"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editEventDescription"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"
        style="@style/EditTextHint"
        android:textAlignment="center"
        android:background="@drawable/rounded_item"
        android:paddingVertical="17dp"
        android:paddingHorizontal="15dp"
        android:maxLength="288"
        app:layout_constraintTop_toBottomOf="@id/editEventName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <ListView
        android:id="@+id/listEventWorkers"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_item"
        android:divider="@null"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/editEventDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHSV"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_item"
        app:layout_constraintTop_toBottomOf="@id/listEventWorkers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">

        <HorizontalScrollView
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupEventWorkers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="15dp"
                app:singleLine="true" />
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/buttonAddEvent"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_action_item"
        android:text="@string/add_event"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHSV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>